Fix old copy-paste in task schedule

--- a/schedule_view/task_schedule.cfg
+++ b/schedule_view/task_schedule.cfg
@@ -37,8 +37,8 @@ alert       aca@cfa.harvard.edu
 # example below, the commands are done once each 1, 2, and 4 minutes, respectively.
 
 <task schedule_view3>
-      cron       5 9,15 * * *
-      check_cron 15 8 * * * 
+      cron       * * * * *
+      check_cron * * * * *
       exec 1 : schedule_view_update_page --outdir $ENV{SKA}/www/ASPECT/schedule_view3
       context 1      
       <check>
